tests/ui/rfcs/rfc-2632-const-trait-impl/issue-102156.stderr
error[E0433]: cannot find item `core` in the crate root
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^
   |     |
   |     you might be missing a crate named `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^
   |     |
   |     you might be missing a crate named `core`
   |     help: try using `std` instead of `core`: `std`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
